app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

body {
  margin: 0;
  background: url(background/ladder2.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;
 font-family: 'Roboto';
}

a {
  color: rgb(98,151,176);
}

.header {
  background-color: lightgray;
  padding: 20px 40px;
  margin: 0;
  position: fixed;
  width: 100%;
  z-index: 1
}

.content {
  position: absolute;
  margin: 100px 0px;
  padding: 20px;
  background-color: rgba(245,245,245,0.7);
  min-width: 500px;
  max-width: 80%
}

.clearnav {
  background: rgba(255, 255, 255, 0);
  border: none;
  border-bottom: 2px solid rgb(98,151,176);
  border-radius: 0;
}

.profile_pic {
  width: 90px;
  height: 90px;

  border: 1px solid lightgrey;
  border-radius: 100px;
  overflow: hidden;
}

.btn-primary {
  background: rgb(98,151,176)
}

.btn-default {
  color: rgb(98,151,176);
  border-color: rgb(98,151,176);
  text-decoration: none
}

.teal {
  color: rgb(98,151,176);
}

.teal:hover {
  color: white;
  background-color: rgb(98,151,176);
}

